// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Greeting Component > should match snapshot when a name is provided 1`] = `
<div
  class="p-4 my-4 border border-indigo-200 dark:border-indigo-800 rounded-lg bg-white dark:bg-slate-800 shadow-sm"
>
  <p
    class="text-lg text-indigo-600 dark:text-indigo-400"
  >
    Hello, 
    Bob
    !
  </p>
</div>
`;

exports[`Greeting Component > should match snapshot when no name is provided 1`] = `
<div
  class="p-4 my-4 border border-indigo-200 dark:border-indigo-800 rounded-lg bg-white dark:bg-slate-800 shadow-sm"
>
  <p
    class="text-lg text-indigo-600 dark:text-indigo-400"
  >
    Hello, 
    Stranger
    !
  </p>
</div>
`;

exports[`Greeting Component should match snapshot when a name is provided 1`] = `
<div
  class="p-4 my-4 border border-indigo-200 dark:border-indigo-800 rounded-lg bg-white dark:bg-slate-800 shadow-sm"
>
  <p
    class="text-lg text-indigo-600 dark:text-indigo-400"
  >
    Hello, 
    Bob
    !
  </p>
</div>
`;

exports[`Greeting Component should match snapshot when no name is provided 1`] = `
<div
  class="p-4 my-4 border border-indigo-200 dark:border-indigo-800 rounded-lg bg-white dark:bg-slate-800 shadow-sm"
>
  <p
    class="text-lg text-indigo-600 dark:text-indigo-400"
  >
    Hello, 
    Stranger
    !
  </p>
</div>
`;
